# kaffee-kasse-backend

./: Dockerfile  Dockerfile.prod  README.md  docker-compose.dev.yml  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
.vim/: coc-settings.json
kaffee_kasse/: asgi.py  settings.py  urls.py  wsgi.py
purchases/: models.py  serializers.py  tests.py  views.py
purchases/migrations/: 0001_initial.py
users/: models.py  permissions.py  serializers.py  tests.py  views.py
users/migrations/: 0001_initial.py
